--- a/Resources/views/Cart/index.html.twig
+++ b/Resources/views/Cart/index.html.twig
@@ -13,7 +13,7 @@
                         <th>Sku</th>
                         <th>Price</th>
                         <th>Qty</th>
-                        {% if is_multi_shipping_enabled and addresses|length > 1 %}
+                        {% if is_multi_shipping_enabled and customerAddresses()|length > 0 %}
                         <th>Address</th>
                         {% endif %}
                         <th>&nbsp;</th>
@@ -39,7 +39,7 @@
                             <td>{{ item.sku }}</td>
                             <td>{{ decorate(item.price) }}</td>
                             <td><input class="form-control" type="number" name="qty[{{ item.product_id }}]" value="{{ item.qty }}" /></td>
-                            {% if is_multi_shipping_enabled and customerAddresses()|length > 1 %}
+                            {% if is_multi_shipping_enabled and customerAddresses()|length > 0 %}
                             <td>
                                 <select name="product_address[{{ item.product_id }}]" class="form-control product-shipping">
                                 {% for address in customerAddresses() %}
@@ -118,19 +118,21 @@
                         <tbody>
 
             {% if is_multi_shipping_enabled %}
-                {% for address_id, methods in cartShippingMethods('') %}
-
-                    <tr>
-                        <td>{{ addressLabel(address_id) }}</td>
-                        <td class="text-center">
-                            <select name="shipping_methods[{{ address_id }}]" class="form-control">
-                                {% for method in methods %}
-                                    <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                    </tr>
-
+                {% for src_address_key, address_ids in cartShippingMethods('') %}
+                    {% for address_id, methods in address_ids %}
+                        {% if methods|length > 0 %}
+                        <tr>
+                            <td>{{ addressLabel(address_id) }}</td>
+                            <td class="text-center">
+                                <select name="shipping_methods[{{ src_address_key }}][{{ address_id }}]" class="form-control">
+                                    {% for method in methods %}
+                                        <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id, src_address_key) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                                    {% endfor %}
+                                </select>
+                            </td>
+                        </tr>
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
             {% else %}
 
