--- a/Resources/views/frontend-layout.html.twig
+++ b/Resources/views/frontend-layout.html.twig
@@ -139,13 +139,13 @@
         <div class="row alerts">
 
             {% for state in ['info', 'warning', 'success', 'danger'] %}
-                {% for flashMessages in app.session.flashbag.get(state) %}
-                    {% for flashMessage in flashMessages %}
-                        <div class="alert alert-{{ state }} alert-dismissible">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            {{ flashMessage }}
-                        </div>
-                    {% endfor %}
+                {% for idx, flashMessage in app.session.flashbag.get(state) %}
+
+                    <div class="alert alert-{{ state }} alert-dismissible">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        {{ flashMessage }}
+                    </div>
+
                 {% endfor %}
             {% endfor %}
 
