--- a/Resources/views/Email/password_reset.html.twig
+++ b/Resources/views/Email/password_reset.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MobileCartFrontendBundle::email-layout.html.twig' %}
+{% extends layout('email') %}
 
 {% block content %}
 <p>Your new Password is: {{ password }}</p>
