--- a/Resources/views/Email/customer_update_password.html.twig
+++ b/Resources/views/Email/customer_update_password.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MobileCartFrontendBundle::email-layout.html.twig' %}
+{% extends layout('email') %}
 
 {% block content %}
 <p>Hello {{ first_name }} {{ last_name }},</p>
