improve handling of assets

--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -50,5 +50,5 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ frontendAsset('css/login.css') }}" rel="stylesheet" type="text/css" />
 {% endblock %}
