--- a/Resources/views/Category/index.html.twig
+++ b/Resources/views/Category/index.html.twig
@@ -115,7 +115,7 @@
 {% block javascripts %}
     {{ parent() }}
     {% include templatePath('Shared:js-autocomplete.html.twig') %}
-    <script type="text/javascript" src="{{ asset('bundles/mobilecartcore/js/config-product-addtocart.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/mobilecartfrontend/js/listing-pager.js') }}"></script>
+    <script type="text/javascript" src="{{ frontendAsset('js/config-product-addtocart.js') }}"></script>
+    <script type="text/javascript" src="{{ frontendAsset('js/listing-pager.js') }}"></script>
 
 {% endblock %}
