--- a/Resources/views/Product/view.html.twig
+++ b/Resources/views/Product/view.html.twig
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <img class="slide-image" src="{{ asset(imagePath('product', entity, 'list_grid')) }}" alt="{{ entity.name }}" />
+            <img class="slide-image" src="{{ asset(imagePath('product', entity, 'list_grid', 1)) }}" alt="{{ entity.name }}" />
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 product type-{{ entity.type }}" data-config='{{ entity.config|raw }}'>
             <div class="price-box">
