--- a/Resources/views/Product/index.html.twig
+++ b/Resources/views/Product/index.html.twig
@@ -121,7 +121,7 @@
                 <div class="col-sm-4 col-lg-3 col-md-4 product type-{{ entity.type }}" data-config='{{ entity.config|raw }}'>
                     <div class="thumbnail">
                         <a href="{{ path('cart_product_view', { 'slug': entity.slug }) }}">
-                            <img src="{{ asset(imagePath('product', entity, 'list_grid')) }}" alt="" />
+                            <img src="{{ asset(imagePath('product', entity, 'list_grid', 1)) }}" alt="" />
                         </a>
 
                         <div class="caption">
