add new fields to contact form message

--- a/Resources/views/Email/contact_message.html.twig
+++ b/Resources/views/Email/contact_message.html.twig
@@ -3,6 +3,8 @@
 
     <h1>Contact Form Submission</h1>
     <p>From : {{ email }}</p>
+    <p>Name : {{ name }}</p>
+    <p>Phone : {{ phone }}</p>
     <p>Message: <br>{{ message }}</p>
 
 {% endblock %}
