--- a/Resources/views/Product/facet-list.html.twig
+++ b/Resources/views/Product/facet-list.html.twig
@@ -18,7 +18,7 @@
             <li class="">
                 <a href="#">{{ facets.label }}<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse">
-                {% for termCounts in facets.terms %}
+                {% for termCounts in facets.terms if termCounts.term|length > 0 %}
                     <li>
                     {% if termCounts.remove_url is defined and termCounts.remove_url|length > 0 %}
                         <a href="{{ termCounts.remove_url }}">{{ termCounts.term|humanize }}
