--- a/Resources/views/Customer/forgot_password.html.twig
+++ b/Resources/views/Customer/forgot_password.html.twig
@@ -8,7 +8,7 @@
                 <h1 class="text-center login-title">Forgot Password</h1>
                 <div class="account-wall">
 
-                    <img class="profile-img" src="{{ asset('bundles/mobilecartfrontend/images/user-icon.svg') }}" alt="">
+                    <img class="profile-img" src="{{ asset(frontendAsset('images/user-icon.svg')) }}" alt="">
 
                     {{ form_start(form, {'attr':{'class':'form-signin'}}) }}
                     {{ form_widget(form) }}
@@ -23,5 +23,5 @@
 {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ asset(frontendAsset('css/login.css')) }}" rel="stylesheet" type="text/css" />
 {% endblock %}
