--- a/Resources/views/Customer/forgot_password_success.html.twig
+++ b/Resources/views/Customer/forgot_password_success.html.twig
@@ -6,7 +6,7 @@
             <div class="col-sm-6 col-md-4 col-md-offset-4">
                 <h1 class="text-center login-title">Thank You</h1>
                 <div class="account-wall">
-                    <img class="profile-img" src="{{ asset('bundles/mobilecartfrontend/images/user-icon.svg') }}" alt="">
+                    <img class="profile-img" src="{{ asset(frontendAsset('images/user-icon.svg')) }}" alt="">
                     <p class="text-center bold">Please check your email, to confirm your account.</p>
                 </div>
             </div>
@@ -16,5 +16,5 @@
 {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ asset(frontendAsset('css/login.css')) }}" rel="stylesheet" type="text/css" />
 {% endblock %}
