--- a/Resources/views/Customer/orders.html.twig
+++ b/Resources/views/Customer/orders.html.twig
@@ -1,55 +1,48 @@
-{% extends frontend() %}
+{% extends templatePath('Customer:dashboard.html.twig', 'frontend') %}
+{% block main_content %}
+    <div class="col-sm-9">
 
-{% block sidebar %}
-<div class="container">
-    <div class="row">
-        <div class="col-sm-3">
-            <nav role="navigation" class="navbar-default navbar-static-side ">
-                <div class="sidebar-collapse">
-                    <ul class="side-menu nav">
-                        {% for nav in navigation %}
-                            <li>
-                                <a href="{{ nav.url }}">{{ nav.label }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </nav>
+        <div class="row">
+            <div class="col-xs-12">
+                <h1 class="page-header">{% block header_text %}My Orders{% endblock %}</h1>
+            </div>
         </div>
-{% endblock %}
-{% block content %}
-        <div class="col-sm-9">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Customer Orders</h2>
-                </div>
-                <div class="panel-body">
 
+        <div class="row">
+            <div class="col-xs-12 header-buttons">
+                <a href="{{ path('customer_profile') }}" class="btn btn-default">Back</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+
+                <table class="table table-striped table-bordered table-hover">
+                    <tr>
+                        <th>Order #</th>
+                        <th>Date</th>
+                        <th>Status</th>
+                        <th>Total</th>
+                    </tr>
                     {% if orders|length > 0 %}
-                    <table class="table table-striped table-bordered table-hover">
-                        <tr>
-                            <th>Order #</th>
-                            <th>Date</th>
-                            <th>Status</th>
-                            <th>Total</th>
-                        </tr>
                         {% for order in orders %}
-                        <tr>
-                            <td>
-                                <a href="{{ path('customer_order', {'id': order.id}) }}">{{ order.referencenbr }}</a>
-                            </td>
-                            <td>{{ order.status }}</td>
-                            <td>{{ order.createdat|date('m/d/Y') }}</td>
-                            <td>{{ decorate(order.basetotal) }}</td>
-                        </tr>
+                            <tr>
+                                <td>
+                                    <a href="{{ path('customer_order', {'id': order.id}) }}">{{ order.referencenbr }}</a>
+                                </td>
+                                <td>{{ order.status }}</td>
+                                <td>{{ order.createdat|date('m/d/Y') }}</td>
+                                <td>{{ decorate(order.basetotal) }}</td>
+                            </tr>
                         {% endfor %}
-                    </table>
                     {% else %}
-                    <p>No Orders in History</p>
+                    <tr>
+                        <td colspan="4">No Orders Found</td>
+                    </tr>
                     {% endif %}
-                </div>
+                </table>
+
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
