--- a/Resources/views/Product/view.html.twig
+++ b/Resources/views/Product/view.html.twig
@@ -35,24 +35,32 @@
             </div>
             <div class="add-to-cart">
                 <form method="post" class="add-to-cart" action="{{ path('cart_add_item', {'id': entity.id}) }}">
-                    {% if entity.type == 2 %}
-                        <input type="hidden" class="simple_id" name="simple_id" value="" />
-                    {% endif %}
 
-                    {% if config_data.config_values is defined %}
-                        {% include templatePath('Shared:html-productconfig-options.html.twig') with {'config_data': config_data} %}
+                    {# Handle Configurable Product UI #}
+                    {% if entity.type == 2 %}
+                        {# this should be dynamically changed with javascript BEFORE the form is submitted #}
+                        <input type="hidden" class="simple_id" name="simple_id" value="" />
+
+                        {# product options, variants #}
+                        {% if config_data.config_values is defined %}
+                            {% include templatePath('Shared:html-productconfig-options.html.twig') with {'config_data': config_data} %}
+                        {% endif %}
+
                     {% endif %}
 
                     <div class="row cart-buttons">
-                        <div class="col-xs-12">
+                        <div class="col-xs-6">
+                            <label>Qty</label>
+                            <input type="text" class="form-control" name="qty" value="1" />
+                        </div>
+                        <div class="col-xs-6 text-center">
                             {% if entity.getIsInStock() %}
-                                <button type="submit" class="btn-lg btn-primary addtocart pull-right"><i class="fa fa-shopping-cart"> </i>&nbsp;Add to Cart</button>
+                                <button type="submit" class="btn-lg btn-primary addtocart"><i class="fa fa-shopping-cart"> </i>&nbsp;Add to Cart</button>
                             {% elseif entity.canBackorder() %}
-                                <button type="submit" class="btn btn-primary addtocart pull-right">Backorder</button>
+                                <button type="submit" class="btn btn-primary addtocart">Backorder</button>
                             {% else %}
                                 <p>Currently Unavailable</p>
                             {% endif %}
-                            <input type="hidden" name="qty" value="1" />
                         </div>
                     </div>
                 </form>
