--- a/Resources/views/Checkout/totals_discounts.html.twig
+++ b/Resources/views/Checkout/totals_discounts.html.twig
@@ -50,15 +50,13 @@
                 </thead>
                 <tbody>
 
-            {% if is_multi_shipping_enabled %}
-
-                {% for src_address_key, address_ids in cartShippingMethods('') %}
+                {% for src_address_key, address_ids in cartAllShippingMethods() %}
                     {% for address_id, methods in address_ids %}
                         {% if methods|length > 0 %}
                             <tr>
                                 <td>{{ addressLabel(address_id) }}</td>
                                 <td class="text-center">
-                                    <select name="shipping_methods[{{ src_address_key }}][{{ address_id }}]" class="form-control multi-shipping">
+                                    <select name="shipping_methods[{{ src_address_key }}][{{ address_id }}]" class="form-control{% if is_multi_shipping_enabled %} multi-shipping{% endif %}">
                                         {% for method in methods %}
                                             <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id, src_address_key) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
                                         {% endfor %}
@@ -68,21 +66,6 @@
                         {% endif %}
                     {% endfor %}
                 {% endfor %}
-
-            {% else %}
-
-                    <tr>
-                        <td>Main Shipping Address</td>
-                        <td class="text-center">
-                            <select name="shipping_method" class="form-control">
-                                {% for method in cartShippingMethods() %}
-                                    <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                    </tr>
-
-            {% endif %}
 
                 </tbody>
 
